Updated From Bhavesh

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HappnClone">
-        <activity android:name=".DataPolicy"></activity>
+        <activity android:name=".FBPrivacyPolicy" />
+        <activity android:name=".FBTermsConditions" />
+        <activity android:name=".DataPolicy" />
         <activity android:name=".TermsConditions" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -21,9 +23,13 @@
             </intent-filter>
         </activity>
 
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
