--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HappnClone">
+        <activity android:name=".Quiz.VacationAdventure"></activity>
+        <activity android:name=".Quiz.Exercise_main" />
+        <activity android:name=".Quiz.NightLifeFifth" />
+        <activity android:name=".Quiz.CodingQuizSixth" />
+        <activity android:name=".Quiz.QuizThreeQuiz" />
+        <activity android:name=".Quiz.quizHeightTwo" />
+        <activity android:name=".Quiz.quizOneWhyHappn" />
+        <activity android:name=".Quiz.QuizIntro" />
+        <activity android:name=".Quiz.MaleFemaleCheck" />
         <activity android:name=".FBPrivacyPolicy" />
         <activity android:name=".FBTermsConditions" />
         <activity android:name=".DataPolicy" />
@@ -23,13 +32,12 @@
             </intent-filter>
         </activity>
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
-
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
     </application>
 
 </manifest>
