--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            java {
+                srcDirs 'src\\main\\java', 'src\\main\\java\\2'
+            }
+        }
+    }
 }
 
 dependencies {
